# GAIT_ASM3_RL

./: .gitignore  AIMED_SHOT_REWARD.md  CURRICULUM_REDESIGN_50STAGES.md  CURRICULUM_UPDATE_SUMMARY.md  DROPBOX_NATIVE_UPLOAD_README.md  DROPBOX_UPLOAD_README.md  GRIDWORLD_REPORT.md  GW_EVAL_RESULT_FINAL.md  HEADLESS_EVAL_COMPLETE.md  HEADLESS_EVAL_QUICKSTART.md  IL_QUICKSTART.md  IMITATION_LEARNING.md  IMITATION_LEARNING_IMPLEMENTATION.md  MODEL_TRACK_LOG.md  OVERFIT_GROKKING_GUIDE.md  OVERFIT_QUICKSTART.md  PROTON_UPLOAD_README.md  PUFFERLIB_MIGRATION.md  PYTORCH_MIGRATION.md  QUICKSTART_50STAGE_CURRICULUM.md  QUICKSTART_NEW_CURRICULUM.md  QUICKSTART_PUFFERLIB.md  README.md  REFACTORING_SUMMARY.md  REWARD_OPTIMIZATION_OPTIONB.md  REWARD_OPTIONB_QUICKSTART.md  SCALED_DQN_README.md  SCP_UPLOAD_README.md  STYLE2_IMPLEMENTATION_SUMMARY.md  STYLE_SPECIFIC_TRAINING_GUIDE.md  TENSORBOARD_STYLE_LOGGING.md  ULTRA_GRANULAR_CURRICULUM_UPDATE.md  archive_old_models.py  arena_optuna.db  benchmark_gpu_speedup.py  comparison_s1.csv  comparison_s1_curriculum.csv  comparison_s2.csv  final_sound_test.py  launcher.py  (+13 more)
.ipynb_checkpoints/: model_comparison-checkpoint.ipynb
arena/: EVAL_HEADLESS_README.md  README.md  README_EVALUATION.md  STYLE2_ALIGNMENT_REWARD.md  __init__.py  callbacks.py  config.py  entities.py  environment.py  eval_compare_all.py  eval_examples.bat  eval_examples.sh  eval_headless.py  eval_headless_old.py  eval_latest.py  evaluate.py  menu.py  renderer.py  sb3_utils.py  train.py  train_optuna.py  tune_hyperparameters.py  utils.py
gridworld/: README.md  __init__.py  agent.py  agents.py  config.py  environment.py  environment.yml  evaluate.py  main.py  renderer.py  requirements.txt  train.py
tests/: test_spawner_multiplier.py
tools/: README_R2.md  evaluate_latest.py  example.r2.env  gw_scp_push.py  (+5 more)
(+86 files in other folders)
