[project]
name = "asm3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pygame>=2.6.1",
    "stable-baselines3[extra]>=2.7.1",
    "tensorboard>=2.20.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "gymnasium>=0.29.0",
    "optuna>=3.0.0",
    "torch>=2.0.0",
    "torch",
    "torchvision",
    "torchaudio",
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
